# OutageML

./: README.md
A2C model/: DNDF.py  a2c_helpers.py
client/: package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/components/: HomePage.jsx  Map.jsx  Navbar.jsx  TestPage.jsx
server/exampleApp/: models.py  serializers.py  urls.py  views.py
server/exampleApp/migrations/: 0002_transformer_delete_customer.py  0003_alter_transformer_time_elapsed.py
server/main/: settings.py  urls.py
training/: dndf.py  pyproject.toml  train_dndf.py  training_data.py
training/data/: big_data.csv  dndf_sim.csv  x0.csv  x1.csv  x2.csv  x3.csv  x4.csv  x5.csv
training/models/: dndf.pt
