[tool.poetry]
name = "my_project-training"
version = "0.1.0"
description = "Training scripts for My Project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"
numpy = "^1.21.0"
pandas = "^1.3.0"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"
